--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@ h3{
 }
 
 ul{
-  width:50%;
+  width:30%;
   margin:auto;
 }
 
@@ -49,8 +49,11 @@ table{
   border-collapse:collapse;
   margin:auto;
   width:50%;
+  text-align: center;
 }
 
 table, th, td {
   border: 1px solid black;
 }
+
+tr:hover, li:hover {background-color: #f5f5f5;}
